Revert "⚡️ toList instead of collect(Collectors.toList())"
This reverts commit f1ac8728a18d1714d6001301a053b371105adb5a.